# scipion-em-esrf

./: .gitignore  CHANGES.txt  ESRFMetadataManagerClient.py  MANIFEST.in  README.rst  __init__.py  esrf_launch_workflow.py  esrf_utils_icat.py  esrf_utils_ispyb.py  esrf_utils_path.py  ispyb_esrf_utils.py  protocol_monitor_ispyb_esrf.py  requirements.txt  scipion_install_cvmfs.sh  scipion_install_pxsoft.sh  setup.cfg  setup.py  test_esrf_utils_icat.py  test_esrf_utils_icat_execution.py  test_esrf_utils_ispyb.py  test_esrf_utils_ispyb_execution.py  test_esrf_utils_path.py  test_ispyb_esrf_utils.py
config/: hosts.conf  scipion.conf
esrf/: __init__.py  protocols.py
esrf/protocols/: __init__.py  protocol_monitor_ispyb_esrf.py
esrf/tests/: __init__.py  test_esrf_utils_icat.py  test_esrf_utils_icat_execution.py  test_esrf_utils_ispyb.py  test_esrf_utils_ispyb_execution.py  test_esrf_utils_path.py  test_esrf_utils_serialem.py  test_esrf_utils_slurm.py
esrf/utils/: ESRFMetadataManagerClient.py  __init__.py  em.py  esrf_launch_workflow.py  esrf_utils_icat.py  esrf_utils_ispyb.py  esrf_utils_path.py  esrf_utils_serialem.py  esrf_utils_slurm.py
esrf/workflow/: __init__.py  celeryconfig.py  cm_process_start.py  cm_process_status.py  cm_process_stop.py  cm_process_worker.py  cm_process_worker_shutdown.py  command_line_parser.py  esrf_launch_workflow.py  scipion_celery_client.py  scipion_celery_client_test_revoke.py  (+3 more)
tests/: test_esrf_utils_icat.py  test_esrf_utils_icat_execution.py  test_esrf_utils_ispyb_execution.py  test_esrf_utils_path.py  test_esrf_utils_serialem.py
(+53 files in other folders)
