[metadata]
name = scipion-em-esrf
version = 1.1.0
author = ESRF
author_email = svensson@esrf.fr
description = Workflow for automatic processing of CryoEM data
long_description = file: README.rst
long_description_content_type = text/markdown
license = MIT
url = https://gitlab.esrf.fr/svensson/bes/
project_urls =
    Source = https://github.com:olofsvensson/scipion-em-esrf
    Documentation = https://github.com:olofsvensson/scipion-em-esrf
    Tracker = https://github.com:olofsvensson/scipion-em-esrf/issues
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
package_dir=
	=src
packages=find:
python_requires = >=3.8
install_requires =
    suds
    ewoks
    ewoksjob
    redis
    objgraph
    pycuda
    pytango
    scipion-em-facilities
    scipion-em-cistem
    scipion-em-eman2
    scipion-em-gctf
    scipion-em-motioncorr
    scipion-em-relion
    scipion-em-sphire
    scipion-em-xmipp

[options.packages.find]
where=src

[options.package_data]
* = *.json *.ini


# E501 (line too long) ignored for now
# E203 and W503 incompatible with black formatting (https://black.readthedocs.io/en/stable/compatible_configs.html#flake8)
[flake8]
ignore = E501, E203, W503
max-line-length = 88
exclude =
    .eggs

